refactor: auth response types
